<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:stretchColumns="1">
	
	<TableRow>   	
	    
	<Spinner 
		android:id="@+id/ListCategories" 
		android:layout_span="2"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:padding="3dip">
	</Spinner>   	
	  </TableRow>
	  

   <TableRow>
       <TextView
           android:text="@string/category"
           android:textStyle="bold"
           android:gravity="right"
           android:padding="3dip" />

       <EditText android:id="@+id/entry_category"
           android:padding="3dip"
            />
   </TableRow>

     <TableRow
       android:gravity="right">

      <Button android:id="@+id/save" 
		  	android:text="@string/save"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			/>
	  <Button android:id="@+id/delete" 
		  	android:text="@string/delete"
		  	android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			/>		
	
   </TableRow>
   
   
</TableLayout>



